--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
@@ -1,7 +1,7 @@
 .et_pb_section {
   &.footer-cta {
     padding-top: 0;
-    background: #f8f8f8;
+    background: transparent;
 
     &::before {
       content: '';
