--- a/wp-content/themes/lfbioenergy-divi-child/css/footer/index.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/footer/index.scss
@@ -1,7 +1,7 @@
 footer.et-l.et-l--footer {
   position: relative;
   top: 0;
-  z-index: 0;
+  z-index: 1;
 
   .footer {
     padding-top: 12em;
@@ -74,4 +74,8 @@ footer.et-l.et-l--footer {
       }
     }
   }
+}
+
+.footer-height {
+  padding-top: 4em !important;
 }
