--- a/wp-content/themes/lfbioenergy-divi-child/css/header/index.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/header/index.scss
@@ -35,14 +35,54 @@
       max-height: 7em;
       position: relative;
       bottom: 2em;
+
+      @media (max-width: 1400px) {
+        max-height: 6em;
+      }
     }
   }
 }
 
 #et-top-navigation {
+  @media (max-width: 1400px) {
+    padding-left: 0 !important;
+  }
+
   .nav {
+    display: flex;
+
+    .submenu-arrow {
+      &::before {
+        content: '';
+        background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/dropdown-arrow.png');
+        background-repeat: no-repeat;
+        position: absolute;
+        width: 2em;
+        height: 1em;
+        right: -1em;
+        background-size: 1em;
+        top: 0.9em;
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+
     li {
+      padding-right: 0;
+      display: flex;
+      justify-content: center;
+      margin: 0 0.5em;
+
+      @media (max-width: 1100px) {
+        margin: 0;
+      }
+
       &.contact {
+        display: flex;
+        align-items: center;
+
         a {
           color: #e1e2da;
           border: 2px solid #e1e2da;
@@ -55,13 +95,88 @@
         font-size: 16px;
         font-weight: 600;
         color: #e1e2da;
-        padding: 0.7em !important;
+        padding: 0.7em 1.5em 1em !important;
+
+        @media (max-width: 1400px) {
+          font-size: 14px;
+        }
 
         &:hover {
           font-weight: 900;
           color: #fff;
           border-bottom: 4px solid #c7da74;
-          transition-duration: 0s;
+        }
+      }
+
+      &:last-child {
+        margin-left: 3em;
+
+        @media (max-width: 1400px) {
+          margin-left: 0;
+        }
+
+        a {
+          @media (max-width: 1200px) {
+            padding: 0.5em 1em !important;
+          }
+
+          &:hover {
+            border: 2px solid #e1e2da;
+          }
+        }
+      }
+
+      .sub-menu {
+        border-top: 4px solid #c7da74;
+        padding-top: 1em;
+        width: 10em;
+        top: 3em;
+        background: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        @media (max-width: 1400px) {
+          width: 8.5em;
+          top: 2.7em;
+        }
+
+        li {
+          background: rgb(59 128 77 / 70%);
+          width: 10em;
+          display: flex;
+          justify-content: center;
+          border-bottom: 4px solid #c7da74;
+          margin-top: 0.8em;
+          padding: 0;
+
+          @media (max-width: 1400px) {
+            width: 8.5em;
+            margin-top: 0.6em;
+          }
+
+          &:first-child {
+            margin-top: 0;
+          }
+
+          &:last-child {
+            margin-left: 0;
+          }
+
+          a {
+            text-align: center;
+            padding: 0.3em 1.5em !important;
+
+            &:hover {
+              color: #fff;
+              font-weight: normal;
+              border-bottom: none;
+            }
+
+            &::before {
+              display: none;
+            }
+          }
         }
       }
     }
