--- a/wp-content/themes/lfbioenergy-divi-child/css/footer/index.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/footer/index.scss
@@ -7,6 +7,18 @@ footer.et-l.et-l--footer {
     padding-top: 12em;
     padding-bottom: 2em;
 
+    @media (max-width: 980px) {
+      padding-top: 25em;
+    }
+
+    @media (max-width: 768px) {
+      padding-top: 7em;
+    }
+
+    @media (max-width: 500px) {
+      padding-top: 10em;
+    }
+
     .et_pb_row {
       display: flex;
       align-items: center;
@@ -18,6 +30,14 @@ footer.et-l.et-l--footer {
       @media (max-width: 980px) {
         padding-left: 2em;
         padding-right: 2em;
+        display: flex;
+        flex-direction: column;
+      }
+
+      @media (max-width: 980px) {
+        img {
+          width: 15em;
+        }
       }
 
       .et_pb_text_inner {
@@ -44,9 +64,32 @@ footer.et-l.et-l--footer {
         position: relative;
         top: 1em;
 
+        @media (max-width: 980px) {
+          justify-content: start;
+        }
+
+        @media (max-width: 767px) {
+          flex-direction: column;
+          align-items: start;
+        }
+
         a {
           font-size: 16px;
           margin: 0 1.5em;
+
+          &:last-child {
+            margin: 0;
+          }
+
+          @media (max-width: 980px) {
+            &:first-child {
+              margin-left: 0;
+            }
+
+            @media (max-width: 767px) {
+              margin: 0.5em 0;
+            }
+          }
         }
 
         a,
@@ -56,17 +99,24 @@ footer.et-l.et-l--footer {
           font-weight: 600;
         }
 
-        .fa-brands {
-          font-size: 26px;
-          border: 2px solid #c7d974;
-          border-radius: 10px;
-          padding: 5px;
-          width: 1.5em;
+        .social {
           display: flex;
-          justify-content: center;
 
-          &:last-child {
-            margin-left: 0.5em;
+          @media (max-width: 500px) {
+            flex-direction: row;
+            align-items: center;
+            width: 7em;
+            justify-content: space-between;
+          }
+
+          .fa-brands {
+            font-size: 26px;
+            border: 2px solid #c7d974;
+            border-radius: 10px;
+            padding: 5px;
+            width: 1.5em;
+            display: flex;
+            justify-content: center;
           }
         }
       }
