--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/expectations.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/expectations.scss
@@ -3,6 +3,23 @@
     height: 85vh;
     background: linear-gradient(to bottom, #ededeb 50%, #f8f8f8 50%);
 
+    @media (max-width: 980px) {
+      background: #4d4d4d;
+      height: 130vh;
+    }
+
+    @media (max-width: 767px) {
+      height: 155vh;
+    }
+
+    @media (max-width: 767px) {
+      height: 170vh;
+    }
+
+    @media (max-width: 500px) {
+      height: 175vh;
+    }
+
     &::before {
       content: '';
       background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/green-wave.png');
@@ -12,42 +29,80 @@
       background-repeat: no-repeat;
       z-index: 2;
       background-position: center;
+
+      @media (max-width: 980px) {
+        display: none;
+      }
     }
 
     .et_pb_row {
       &:first-child {
         padding-top: 7em !important;
+
+        @media (max-width: 1100px) {
+          padding-top: 5em !important;
+        }
       }
     }
 
     h2 {
       color: #e1e2da;
       font-weight: 200;
+
+      @media (max-width: 1100px) {
+        font-size: 42px;
+      }
     }
 
     .et_pb_blurb {
       background: #3b804d;
       padding: 1.5em;
 
-      .et_pb_module_header {
-        font-family: Poppins, helvetica, arial, lucida, sans-serif;
-        font-size: 200px;
-        color: #c7da74;
-        font-weight: 200;
-      }
+      .et_pb_blurb_content {
+        @media (max-width: 980px) {
+          max-width: 100%;
+        }
 
-      .sub-title {
-        font-size: 24px;
-        font-family: Poppins, helvetica, arial, lucida, sans-serif;
-        color: #c7da74;
-        font-weight: 900;
-      }
+        .et_pb_module_header {
+          font-family: Poppins, helvetica, arial, lucida, sans-serif;
+          font-size: 200px;
+          color: #c7da74;
+          font-weight: 200;
 
-      p {
-        color: #fff;
-        font-size: 22px;
-        font-weight: 200;
-        line-height: 1.2;
+          @media (max-width: 1300px) {
+            font-size: 150px;
+          }
+
+          @media (max-width: 1100px) {
+            font-size: 100px;
+          }
+
+          @media (max-width: 980px) {
+            font-size: 80px;
+          }
+        }
+
+        .sub-title {
+          font-size: 24px;
+          font-family: Poppins, helvetica, arial, lucida, sans-serif;
+          color: #c7da74;
+          font-weight: 900;
+
+          @media (max-width: 1100px) {
+            font-size: 20px;
+          }
+
+          @media (max-width: 980px) {
+            font-size: 18px;
+          }
+        }
+
+        p {
+          color: #fff;
+          font-size: 22px;
+          font-weight: 200;
+          line-height: 1.2;
+        }
       }
     }
   }
