--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/community.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/community.scss
@@ -21,6 +21,12 @@
         }
       }
 
+      .et_pb_text_inner {
+        font-size: 22px;
+        font-weight: 200;
+        color: #4d4d4d;
+      }
+
       &:nth-child(1),
       &:nth-child(3) {
         position: relative;
@@ -45,6 +51,77 @@
           }
         }
       }
+    }
+  }
+
+  &.impact-area {
+    &.green-wave {
+      height: 65vh;
+
+      @media (max-width: 980px) {
+        height: 105vh;
+      }
+
+      @media (max-width: 768px) {
+        height: 105vh;
+      }
+
+      @media (max-width: 768px) {
+        height: 115vh;
+      }
+
+      @media (max-width: 500px) {
+        height: 120vh;
+      }
+
+      h3 {
+        font-size: 78px;
+        font-weight: 200;
+        color: #e1e2da;
+        width: 500px;
+
+        @media (max-width: 1100px) {
+          font-size: 60px;
+        }
+      }
+
+      .et_pb_text_inner {
+        color: #fff;
+
+        ul {
+          li {
+            list-style-type: none;
+            margin: 2em 0;
+            font-size: 22px;
+            font-weight: 900;
+            border-bottom: 2px solid #99c45a;
+            padding-bottom: 0.5em;
+
+            &:first-child {
+              margin-top: 0;
+            }
+          }
+        }
+      }
+
+      &::before {
+        content: '';
+        background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/green-wave.png');
+        height: 75vh;
+        background-size: 100% 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        z-index: 2;
+        background-position: center;
+      }
+    }
+  }
+
+  &.environment-cta {
+    padding-top: 12em !important;
+
+    @media (max-width: 980px) {
+      padding-top: 0 !important;
     }
   }
 }
