--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/expectations.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/expectations.scss
@@ -5,19 +5,31 @@
 
     @media (max-width: 980px) {
       background: #4d4d4d;
-      height: 130vh;
+      height: 145vh;
+    }
+
+    @media (max-width: 820px) {
+      height: 105vh;
     }
 
     @media (max-width: 767px) {
       height: 155vh;
     }
 
-    @media (max-width: 767px) {
-      height: 170vh;
+    @media (max-width: 768px) {
+      height: 120vh;
     }
 
     @media (max-width: 500px) {
       height: 175vh;
+    }
+
+    @media (max-width: 390px) {
+      height: 200vh;
+    }
+
+    @media (max-width: 360px) {
+      height: 235vh;
     }
 
     &::before {
