--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
@@ -14,9 +14,25 @@
       background-position: center;
       height: 65vh;
 
+      @media (max-width: 980px) {
+        height: 85vh;
+      }
+
+      @media (max-width: 820px) {
+        height: 63vh;
+      }
+
       @media (max-width: 500px) {
         background-size: 145% 100%;
         height: 80vh;
+      }
+
+      @media (max-width: 390px) {
+        height: 90vh;
+      }
+
+      @media (max-width: 360px) {
+        height: 105vh;
       }
     }
 
@@ -25,10 +41,14 @@
       align-items: center;
       position: relative;
       top: 8em;
+      width: 1300px;
+      max-width: 100%;
 
       @media (max-width: 980px) {
         flex-direction: column;
         top: 10em;
+        padding-left: 2em;
+        padding-right: 2em;
       }
 
       @media (max-width: 768px) {
