--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/key-point.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/key-point.scss
@@ -31,7 +31,7 @@
   }
 
   &.community-cta {
-    padding: 8em 0 10em;
+    padding: 6em 0 10em;
 
     &::before {
       content: '';
@@ -46,7 +46,18 @@
 
       @media (max-width: 1200px) {
         top: 5em;
-        background-size: 100%;
+        background-size: 100% 100%;
+      }
+
+      @media (max-width: 980px) {
+        top: -4em;
+        background-size: 100% 100%;
+        height: 80vh;
+      }
+
+      @media (max-width: 820px) {
+        top: -7em;
+        background-size: 150% 100%;
       }
     }
 
