--- a/wp-content/themes/lfbioenergy-divi-child/css/header/index.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/header/index.scss
@@ -95,10 +95,14 @@
 }
 
 .mobile-menu-toggle {
-  position: absolute;
+  position: fixed;
   z-index: 999;
   right: 3em;
   top: 4em;
+
+  @media (max-width: 980px) {
+    top: 3em;
+  }
 }
 
 .open {
@@ -135,11 +139,17 @@
 }
 
 #main-header {
-  top: 5em !important;
+  top: 0 !important;
+  background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/INTERDEPENDENCE-LF-BioEnergy_WebAssets-1920x235-Nav.png');
+  background-size: 100% 110%;
+  height: 13em;
+  padding-top: 3em;
+  position: fixed !important;
 
   @media (max-width: 980px) {
-    top: 3em !important;
-    z-index: 3;
+    z-index: 2;
+    height: 9em;
+    padding-top: 2em;
   }
 
   .et_menu_container {
@@ -158,6 +168,7 @@
       max-height: 7em;
       position: relative;
       bottom: 2em;
+      z-index: 3;
 
       @media (max-width: 1400px) {
         max-height: 6em;
@@ -226,8 +237,7 @@
         }
 
         a {
-          color: #e1e2da;
-          border: 2px solid #e1e2da;
+          border: 2px solid #3b804d;
           padding: 0.7em 2.5em !important;
 
           &:hover {
@@ -237,10 +247,10 @@
       }
 
       a {
-        font-family: Poppins, sans-serif;
+        font-family: Poppins, helvetica, sans-serif;
         font-size: 16px;
         font-weight: 600;
-        color: #e1e2da;
+        color: #3b804d;
         padding: 0.7em 1.5em 1em !important;
 
         @media (max-width: 1400px) {
@@ -249,7 +259,6 @@
 
         &:hover {
           font-weight: 900;
-          color: #fff;
           border-bottom: 4px solid #c7da74;
         }
       }
@@ -288,6 +297,7 @@
           }
 
           a {
+            color: #fff;
             text-align: center;
             padding: 0.3em 1.5em !important;
 
