--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
@@ -41,11 +41,11 @@
 
     &::before {
       content: '';
-      background-image: url('../assets/img/INTERDEPENDENCE-LF-BioEnergy_WebAssets-1920x1920-Top.png');
-      background-size: cover;
+      background-image: url('../assets/img/INTERDEPENDENCE-LF-BioEnergy_WebAssets-1920x1920-Top_2.png');
+      background-size: 100% 100%;
       background-repeat: no-repeat;
       background-position: center;
-      height: 155vh;
+      height: 85vh;
       width: 100%;
       position: absolute;
       top: 0;
@@ -66,6 +66,10 @@
       font-size: 78px;
       font-weight: 200;
       text-align: center;
+
+      @media (max-width: 980px) {
+        font-size: 48px;
+      }
     }
 
     .et_pb_text_inner {
@@ -73,6 +77,10 @@
       color: #e1e2da;
       text-align: center;
       line-height: 1.3;
+
+      @media (max-width: 980px) {
+        font-size: 20px;
+      }
     }
   }
 
