--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/community.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/community.scss
@@ -71,7 +71,11 @@
       }
 
       @media (max-width: 500px) {
-        height: 120vh;
+        height: 130vh;
+      }
+
+      @media (max-width: 390px) {
+        height: 140vh;
       }
 
       h3 {
@@ -79,6 +83,7 @@
         font-weight: 200;
         color: #e1e2da;
         width: 500px;
+        max-width: 100%;
 
         @media (max-width: 1100px) {
           font-size: 60px;
