--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
@@ -41,7 +41,7 @@
 
     &::after {
          content: "";
-        background-image: url(/wp-content/themes/lfbioenergy-divi-child/assets/img/home-hero-accent.png);
+        background-image: url'(/wp-content/themes/lfbioenergy-divi-child/assets/img/home-hero-accent.png');
         width: 100%;
         height: 20%;
         background-size: contain;
@@ -52,7 +52,7 @@
     }
 
     .et_pb_row {
-      background: rgba(59,128,77, .95);
+      background: rgb(59 128 77 / 95%);
       border-radius: 10px;
       padding: 3em 5em;
 
