--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
@@ -40,15 +40,15 @@
     display: flex;
 
     &::after {
-         content: "";
-        background-image: url'(/wp-content/themes/lfbioenergy-divi-child/assets/img/home-hero-accent.png');
-        width: 100%;
-        height: 20%;
-        background-size: contain;
-        background-repeat: no-repeat;
-        position: absolute;
-        z-index: 1;
-        bottom: -8em;
+      content: '';
+      background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/home-hero-accent.png');
+      width: 100%;
+      height: 20%;
+      background-size: contain;
+      background-repeat: no-repeat;
+      position: absolute;
+      z-index: 1;
+      bottom: -8em;
     }
 
     .et_pb_row {
@@ -56,36 +56,36 @@
       border-radius: 10px;
       padding: 3em 5em;
 
-    .et_pb_bottom_inside_divider {
-      background-size: 99% 83px;
-      bottom: 0;
-      height: 40px;
-      z-index: 1;
-      transform: scale(1);
-    }
+      .et_pb_bottom_inside_divider {
+        background-size: 99% 83px;
+        bottom: 0;
+        height: 40px;
+        z-index: 1;
+        transform: scale(1);
+      }
 
-    h1 {
-      color: #e1e2da;
-      font-size: 78px;
-      font-weight: 200;
-      text-align: center;
+      h1 {
+        color: #e1e2da;
+        font-size: 78px;
+        font-weight: 200;
+        text-align: center;
 
-      @media (max-width: 980px) {
-        font-size: 48px;
+        @media (max-width: 980px) {
+          font-size: 48px;
+        }
+      }
+
+      .et_pb_text_inner {
+        font-size: 26px;
+        color: #e1e2da;
+        text-align: center;
+        line-height: 1.3;
+
+        @media (max-width: 980px) {
+          font-size: 20px;
+        }
       }
     }
-
-    .et_pb_text_inner {
-      font-size: 26px;
-      color: #e1e2da;
-      text-align: center;
-      line-height: 1.3;
-
-      @media (max-width: 980px) {
-        font-size: 20px;
-      }
-    }
-}
   }
 }
 
