--- a/wp-content/themes/lfbioenergy-divi-child/css/buttons.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/buttons.scss
@@ -1,10 +1,11 @@
 .et_pb_button {
   font-size: 16px;
   font-weight: 600;
-  padding: 0.65em 3.7em 0.5em 1em;
+  padding: .75em 2em;
+  margin-top: 6em;
 
   &:hover {
-    padding: 0.65em 3.7em 0.5em 1em !important;
+  padding: .75em 2em !important;
     background: transparent !important;
     color: #3b804d !important;
   }
