Resource button updaets

--- a/wp-content/themes/lfbioenergy-divi-child/css/buttons.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/buttons.scss
@@ -1,11 +1,11 @@
 .et_pb_button {
   font-size: 16px;
   font-weight: 600;
-  padding: .75em 2em;
+  padding: 0.75em 2em;
   margin-top: 6em;
 
   &:hover {
-  padding: .75em 2em !important;
+    padding: 0.75em 2em !important;
     background: transparent !important;
     color: #3b804d !important;
   }
