--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
@@ -56,6 +56,14 @@
       border-radius: 10px;
       padding: 3em 5em;
 
+      @media (max-width: 980px) {
+        padding: 2em 3em;
+      }
+
+      @media (max-width: 500px) {
+        padding: 2em 1em;
+      }
+
       .et_pb_bottom_inside_divider {
         background-size: 99% 83px;
         bottom: 0;
