--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
@@ -19,7 +19,7 @@
       }
 
       @media (max-width: 820px) {
-        height: 63vh;
+        height: 85vh;
       }
 
       @media (max-width: 500px) {
@@ -41,8 +41,10 @@
       align-items: center;
       position: relative;
       top: 8em;
-      width: 1300px;
+      width: 1500px;
       max-width: 100%;
+      padding-left: 5em;
+      padding-right: 5em;
 
       @media (max-width: 980px) {
         flex-direction: column;
