--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
@@ -1,5 +1,8 @@
 .et_pb_section {
   &.resources {
+    padding-bottom: 7em;
+    margin-bottom: -5em;
+
     .dp-dfg-filters.dp-dfg-filters-buttons-layout {
       display: none;
     }
@@ -26,6 +29,10 @@
           color: #3b804d;
           font-size: 54px;
           font-weight: 600;
+
+          @media (max-width: 980px) {
+            font-size: 44px;
+          }
         }
 
         .dp-dfg-content {
