--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
@@ -10,6 +10,14 @@
           display: flex;
           height: 50vh;
 
+          @media (max-width: 980px) {
+            height: 65vh;
+          }
+
+          @media (max-width: 768px) {
+            height: 60vh;
+          }
+
           .et_pb_blurb {
             background: #fff;
             border-radius: 20px;
@@ -110,11 +118,23 @@
       .et_pb_row {
         padding: 1em 3em;
         width: 100%;
+        display: flex;
+        align-items: center;
+
+        @media (max-width: 980px) {
+          flex-direction: column;
+        }
 
         .et_pb_image {
           img {
             border-radius: 50%;
+
+            @media (max-width: 980px) {
+              width: 20em;
+              max-width: 100%;
+            }
           }
+
           @media (max-width: 980px) {
             display: flex;
             justify-content: center;
