team bio and footer updates on mobile

--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
@@ -102,6 +102,8 @@
       }
 
       .et_pb_button {
+        margin-top: 6em;
+
         &.dp-dfg-load-more-button {
           &.dp-dfg-load-more-default {
             color: #3b804d;
