--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
@@ -62,7 +62,7 @@
       }
 
       p {
-        color: #fff;
+        color: #4D4D4D;
         font-size: 22px;
         font-weight: 200;
         line-height: 1.2;
