--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/cta-case-study.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/cta-case-study.scss
@@ -34,6 +34,11 @@
       @media (max-width: 980px) {
         padding-top: 0;
       }
+
+      .et_pb_text_inner {
+        color: #4d4d4d;
+        font-size: 22px;
+      }
     }
   }
 }
