--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
@@ -61,7 +61,8 @@
         top: 8em;
       }
 
-      p {
+      p,
+      .et_pb_text_inner {
         color: #4d4d4d;
         font-size: 22px;
         font-weight: 200;
