--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/audience.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/audience.scss
@@ -37,6 +37,7 @@
       .et_pb_column {
         display: flex;
         flex: 1;
+        height: 50vh;
 
         @media (max-width: 980px) {
           justify-content: center;
@@ -45,6 +46,7 @@
         .et_pb_blurb {
           background: rgb(255 255 255 / 45%);
           border-radius: 10px;
+          height: 50vh;
 
           .et_pb_image_wrap {
             display: flex;
@@ -86,8 +88,8 @@
                 font-size: 14px;
                 padding: 1em 3em;
                 margin-top: 1em;
-                position: relative;
-                top: 1.5em;
+                position: absolute;
+                top: 90%;
                 transition: 0.3s all;
 
                 &:hover {
