--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
@@ -100,6 +100,10 @@
         @media (max-width: 980px) {
           font-size: 48px;
         }
+
+        @media (max-width: 500px) {
+          font-size: 36px;
+        }
       }
 
       .et_pb_text_inner {
