--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
@@ -106,7 +106,7 @@
         }
 
         @media (max-width: 500px) {
-          font-size: 36px;
+          font-size: 36px !important;
         }
       }
 
