--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/community.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/community.scss
@@ -6,6 +6,11 @@
       padding-left: 5em;
       padding-right: 8em;
 
+      @media (max-width: 500px) {
+        padding-left: 3em;
+        padding-right: 3em;
+      }
+
       &:nth-child(2) {
         position: relative;
         right: 5em;
@@ -18,6 +23,14 @@
 
         @media (max-width: 980px) {
           right: 0;
+          padding-left: 5em;
+          padding-right: 5em;
+          padding-bottom: 0 !important;
+        }
+
+        @media (max-width: 500px) {
+          padding-left: 3em;
+          padding-right: 3em;
         }
       }
 
