--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/key-point.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/key-point.scss
@@ -10,15 +10,35 @@
       content: '';
       background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/grey-wave-green-accents.png');
       width: 100%;
-      height: 100vh;
+      height: 103vh;
       background-size: 100% 105%;
       position: absolute;
       background-repeat: no-repeat;
       z-index: 0;
-      top: -5em;
+      top: -4em;
 
       @media (max-width: 1200px) {
-        height: 118vh;
+        height: 100vh;
+      }
+
+      @media (max-width: 980px) {
+        height: 112vh;
+      }
+
+      @media (max-width: 820px) {
+        height: 85vh;
+      }
+
+      @media (max-width: 768px) {
+        height: 95vh;
+      }
+
+      @media (max-width: 680px) {
+        height: 135vh;
+      }
+
+      @media (max-width: 500px) {
+        height: 150vh;
       }
     }
 
@@ -27,6 +47,10 @@
       align-items: end;
       border-bottom: 2px solid #99c45a;
       margin-top: 3em;
+
+      @media (max-width: 500px) {
+        flex-direction: column;
+      }
     }
   }
 
@@ -45,7 +69,7 @@
       top: -5em;
 
       @media (max-width: 1200px) {
-        top: 5em;
+        top: -5em;
         background-size: 100% 100%;
       }
 
@@ -72,6 +96,10 @@
     .et_pb_row {
       position: relative;
       top: 4em;
+
+      @media (max-width: 500px) {
+        width: 90%;
+      }
     }
   }
 
@@ -96,6 +124,10 @@
       align-items: end;
       border-bottom: 2px solid #99c45a;
       margin-top: 3em;
+
+      @media (max-width: 500px) {
+        flex-direction: column;
+      }
 
       h3 {
         color: #3b804d;
