--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/cta-case-study.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/cta-case-study.scss
@@ -21,6 +21,7 @@
 
       @media (max-width: 980px) {
         margin-top: -8em;
+        height: 45vh;
       }
 
       @media (max-width: 500px) {
