--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/footer-cta.scss
@@ -19,7 +19,11 @@
       }
 
       @media (max-width: 820px) {
-        height: 85vh;
+        height: 65vh;
+      }
+
+      @media (max-width: 768px) {
+        height: 70vh;
       }
 
       @media (max-width: 500px) {
