--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
@@ -100,6 +100,10 @@
       z-index: 1;
       background-position: center;
       width: 100%;
+
+      @media (max-width: 980px) {
+        height: 55vh;
+      }
     }
   }
 }
