more mobile styling updates

--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
@@ -33,6 +33,10 @@
           @media (max-width: 980px) {
             font-size: 44px;
           }
+
+          @media (max-width: 980px) {
+            font-size: 36px;
+          }
         }
 
         .dp-dfg-content {
@@ -88,6 +92,10 @@
 
         @media (max-width: 1200px) {
           width: calc(42% - 3em) !important;
+        }
+
+        @media (max-width: 500px) {
+          width: calc(30% - 3em) !important;
         }
       }
 
