--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
@@ -104,6 +104,11 @@
       @media (max-width: 980px) {
         height: 55vh;
       }
+
+      @media (max-width: 500px) {
+        height: 80vh;
+        top: -7em;
+      }
     }
   }
 }
