resources title margin

--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/resources.scss
@@ -29,6 +29,7 @@
           color: #3b804d;
           font-size: 54px;
           font-weight: 600;
+          margin-top: 0.5em;
 
           @media (max-width: 980px) {
             font-size: 44px;
