--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/background-hero.scss
@@ -84,7 +84,7 @@
       }
 
       h1 {
-        color: #e1e2da;
+        color: #fff;
         font-size: 70px;
         font-weight: 200;
         text-align: center;
@@ -112,7 +112,7 @@
 
       .et_pb_text_inner {
         font-size: 26px;
-        color: #e1e2da;
+        color: #fff;
         text-align: center;
         line-height: 1.3;
 
