--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/key-point.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/key-point.scss
@@ -10,7 +10,7 @@
       content: '';
       background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/grey-wave-green-accents.png');
       width: 100%;
-      height: 103vh;
+      height: 115vh;
       background-size: 100% 105%;
       position: absolute;
       background-repeat: no-repeat;
@@ -18,19 +18,19 @@
       top: -4em;
 
       @media (max-width: 1200px) {
-        height: 100vh;
+        height: 115vh;
       }
 
       @media (max-width: 980px) {
-        height: 112vh;
+        height: 125vh;
       }
 
       @media (max-width: 820px) {
-        height: 85vh;
+        height: 90vh;
       }
 
       @media (max-width: 768px) {
-        height: 95vh;
+        height: 110vh;
       }
 
       @media (max-width: 680px) {
@@ -38,8 +38,13 @@
       }
 
       @media (max-width: 500px) {
-        height: 150vh;
+        height: 170vh;
       }
+    }
+
+    h3 {
+      color: #3b804d;
+      font-weight: 900;
     }
 
     .key-point {
@@ -51,25 +56,32 @@
       @media (max-width: 500px) {
         flex-direction: column;
       }
+
+      .description {
+        .et_pb_text_inner {
+          font-size: 22px;
+          font-weight: 600;
+        }
+      }
     }
   }
 
   &.community-cta {
-    padding: 6em 0 10em;
+    padding: 8em 0 10em;
 
     &::before {
       content: '';
       background-image: url('/wp-content/themes/lfbioenergy-divi-child/assets/img/grey-wave-no-accents.png');
       width: 100%;
-      height: 100vh;
+      height: 70vh;
       background-size: 100% 120%;
       position: absolute;
       background-repeat: no-repeat;
       z-index: 0;
-      top: -5em;
+      top: 0;
 
       @media (max-width: 1200px) {
-        top: -5em;
+        top: 0;
         background-size: 100% 100%;
       }
 
