chabgned class name

--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/team-member.scss
@@ -3,7 +3,7 @@
     padding-bottom: 8em;
 
     .et_pb_row {
-      &.et_pb_row_4col {
+      &.team {
         display: flex;
 
         .et_pb_column {
