--- a/wp-content/themes/lfbioenergy-divi-child/css/modules/expectations.scss
+++ b/wp-content/themes/lfbioenergy-divi-child/css/modules/expectations.scss
@@ -64,6 +64,16 @@
     .et_pb_row {
       &:first-child {
         padding-top: 7em !important;
+        display: flex;
+        align-items: center;
+
+        h3 {
+          font-size: 60px;
+        }
+
+        @media (max-width: 980px) {
+          display: block;
+        }
 
         @media (max-width: 1100px) {
           padding-top: 5em !important;
